--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="isaac">
                 <div class="image">
                     <img src="./images/Isaac-Newton.jpg" alt="Isaac-Newton">
-                    <a target="_blank" class="nikola" href="./images/Isaac-Newton.jpg">
+                    <a target="_blank" class="box" href="./images/Isaac-Newton.jpg">
                         <img class="zoom" src="./images/zoom.png" alt="">
                     </a>
                 </div>
@@ -36,7 +36,7 @@
             <div class="albert">
                 <div class="image">
                     <img src="./images/Albert-Einstein.jpg" alt="Albert-Einstein">
-                    <a target="_blank" class="nikola" href="./images/Albert-Einstein.jpg">
+                    <a target="_blank" class="box" href="./images/Albert-Einstein.jpg">
                         <img class="zoom" src="./images/zoom.png" alt="">
                     </a>
                 </div>
@@ -58,7 +58,7 @@
             <div>
                 <div class="image">
                     <img src="./images/Nikola-Tesla.jpg" alt="Nikola-Tesla">
-                    <a target="_blank" class="nikola" href="./images/Nikola-Tesla.jpg">
+                    <a target="_blank" class="box" href="./images/Nikola-Tesla.jpg">
                         <img class="zoom" src="./images/zoom.png" alt="">
                     </a>
                 </div>
